[package]
name = "amm"
version = "0.1.0"
authors = ["Alaa Zorkane <alaazorkane@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_staking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", features = ["init-if-needed"]}
anchor-spl = { git = "https://github.com/coral-xyz/anchor.git"}
constant-product-curve = { git = "https://github.com/deanmlittle/constant-product-curve.git" }
